# md2html

./: .gitignore  Cargo.toml  LICENSE  README.md  test.md
.github/workflows/: benchmark.yml  security.yml  test.yml
benches/: markdown_parsers.rs
benchmark/: README.md  latest_results.md  optimized_results.md  real_simd_results.md  results.md  simd_results.md
benchmark/samples/: large.md  medium.md  small.md
src/: lib.rs  main.rs  simd.rs
