[package]
edition = "2021"
name = "md2html"
version = "0.1.0"

[dependencies]
# Real SIMD dependencies - only included when simd feature is enabled
memchr = { version = "2.7", optional = true }
bytecount = { version = "0.6", optional = true }

[features]
default = []
simd = ["memchr", "bytecount"]

[dev-dependencies]
comrak = "0.40.0"
criterion = {version = "0.6.0", features = ["html_reports"]}
pulldown-cmark = "0.13.0"

[[bench]]
harness = false
name = "markdown_parsers"
